white space issue below "Learn More Button"

--- a/main.css
+++ b/main.css
@@ -11,6 +11,8 @@ header {
 .nav_bar {
 background:#acd373;
     display: inline-block;
+      height: 40px; 
+    width: 360px;
 }
  .toggle {
 display: inline;
@@ -25,7 +27,7 @@ background:#9abd67;
     background-image: url(images/silhuet.png);
         background-repeat: no-repeat;
     background-position: bottom;
-    position: relative;
+   
 text-align: center;
     padding-top: 70px;
 
@@ -60,6 +62,9 @@ text-align: left;
     padding-left: 60px;
     padding-top: 10px;
     padding-bottom: 10px;
+}
+.who_are_we {
+background-color: #f7f7f7;
 }
 h2 {
 color: black;
@@ -107,6 +112,9 @@ p.one {
     height: 30px;
     text-align: center;
     
+}
+.one {
+background-color: #f7f7f7;
 }
 .container video {
 width: 360px;
